# croma

./: README.md  main.py  pyproject.toml
chroma/cli/: commands.py  core.py
chroma/cli/exeptions/: ColorNotFound.py  ColorNotSelected.py
chroma/utils/: getColor.py  utils.py
segmentation/: exeptions.py
segmentation/cli/: commands.py
segmentation/config/: colors.yaml
segmentation/exeptions/: unableOpenWebcam.py
segmentation/src/: getColor.py  segObject.py  segmentation.py  utils.py
segmentation/src/chroma/: chromaImage.py  chromaWebcam.py
src/: main.py  utils.py
src/cli/: core.py
src/segmentation/: byColor.py  segmentation.py
src/utils/: utils.py
