[project]
name="Chroma"
version="1.0.0"
description="Simple croma for segmentation of background from images"
requires-python=">=3.11"
dependencies=[
    "click>=8.1",
    "opencv-python>=4.12",
    "PyYAML>=6.0",
]

[project.scripts]
chroma = "chroma.cli.commands:chroma"

[build-system]
requires = ["flit-core<4"]
build-backend = "flit_core.buildapi"